Add "installcheck-world" makefile target, remove other top-level targets.
The master plan is that we will have straightforward "world" makefile
targets, like newer versions of PostgreSQL has, that build, install,
and test everything in the source tree. For example, "make world" builds
everything and the kitchen sink, and "make installcheck-world" runs
every test suite against an existing installation.

This patch is the first step in that direction. It creates a top-level
"installcheck-world" target, that runs some of the test suites we have.
It does not run everything, because the tests for some components are
either broken, or require additional setup to run. The point of this
first step is to establish the precedence, and clean up and add
everything else that we care about to this new target. For example, this
does not run the gphdfs tests, gpmapreduce tests, or orafce tests yet.

Also, this only adds the "installcheck-world" target, not "world",
"install-world" nor "check-world". Those are TODOs.

Remove other, defunct, top-level targets, to reduce confusion.

Move unittest-check top-level target from gpAux/Makefile to top-level
Makefile, to get some more visibility to it.

Adjust the concourse pipeline scripts to run the new "installcheck-world"
target, replacing the separate "installcheck-good" and
"installcheck-bugbuster" tasks. In the future, whenever a new test suite
is added, it can be added to the installcheck-world target, and the
pipeline will pick it up immediately, without having to modify the yaml
files.

An immediate benefit of this is that we now run the isolationtester test
suite, and the PL tests, as part of the pipeline.

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -103,11 +103,28 @@ distclean maintainer-clean:
 # Garbage from autoconf:
 	@rm -rf autom4te.cache/
 
-check: all
+# This is a top-level target that runs "all" regression test suites against
+# a running server. This is what the CI pipeline runs.
+installcheck-world:
+	$(MAKE) -C src/test installcheck-good
+	$(MAKE) -C src/test installcheck-bugbuster
+	$(MAKE) -C src/test/isolation installcheck
+	$(MAKE) -C src/pl installcheck
+	#$(MAKE) -C src/interfaces/ecpg installcheck
+	#$(MAKE) -C contrib installcheck
+	$(MAKE) -C gpAux/extensions installcheck
+	$(MAKE) -C src/bin/gpfdist installcheck
 
-check installcheck installcheck-parallel installcheck-good:
-	$(MAKE) -C src/test $@
-	$(MAKE) -C gpAux/extensions $@
+
+# Run mock tests, that don't require a running server. Arguably these should
+# be part of [install]check-world, but we treat them more like part of
+# compilation than regression testing, in the CI. But they are too heavy-weight
+# to put into "make all", either.
+.PHONY : unittest-check
+unittest-check:
+	$(MAKE) -C src/backend unittest-check
+	$(MAKE) -C src/bin unittest-check
+
 
 GNUmakefile: GNUmakefile.in $(top_builddir)/config.status
 	./config.status $@
