--- a/concourse/pipelines/dev_pipeline.yml
+++ b/concourse/pipelines/dev_pipeline.yml
@@ -169,8 +169,8 @@ jobs:
       TARGET_OS_VERSION: 7
       BLD_TARGETS: ""
 
-# Stage 2: IC Tests
-- name: icg_planner_centos6
+# Stage 2: Run regression tests (make installcheck-world)
+- name: icw_planner_centos6
   serial: true
   plan:
   - aggregate:
@@ -188,11 +188,11 @@ jobs:
     file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=off' installcheck-good
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=off' installcheck-world
       BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
       TEST_OS: centos
 
-- name: icg_gporca_centos6
+- name: icw_gporca_centos6
   serial: true
   plan:
   - aggregate:
@@ -210,11 +210,11 @@ jobs:
     file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=off' installcheck-good
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=off' installcheck-world
       BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
       TEST_OS: centos
 
-- name: icg_planner_codegen_centos6
+- name: icw_planner_codegen_centos6
   serial: true
   plan:
   - aggregate:
@@ -232,11 +232,11 @@ jobs:
     file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=on' installcheck-good
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=on' installcheck-world
       BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
       TEST_OS: centos
 
-- name: icg_gporca_codegen_centos6
+- name: icw_gporca_codegen_centos6
   serial: true
   plan:
   - aggregate:
@@ -254,95 +254,7 @@ jobs:
     file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=on' installcheck-good
-      BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
-      TEST_OS: centos
-
-- name: icb_planner_centos6
-  serial: true
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [icg_planner_centos6]
-    - get: sync_tools_gpdb_centos
-      resource: sync_tools_gpdb_centos
-      passed: [icg_planner_centos6]
-    - get: bin_gpdb
-      resource: bin_gpdb_centos
-      passed: [icg_planner_centos6]
-      trigger: true
-    - get: centos67-gpdb-gcc6-llvm-image
-  - task: ic_gpdb
-    file: gpdb_src/concourse/tasks/ic_gpdb.yml
-    image: centos67-gpdb-gcc6-llvm-image
-    params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=off' installcheck-bugbuster
-      BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
-      TEST_OS: centos
-
-- name: icb_gporca_centos6
-  serial: true
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [icg_gporca_centos6]
-    - get: sync_tools_gpdb_centos
-      resource: sync_tools_gpdb_centos
-      passed: [icg_gporca_centos6]
-    - get: bin_gpdb
-      resource: bin_gpdb_centos
-      passed: [icg_gporca_centos6]
-      trigger: true
-    - get: centos67-gpdb-gcc6-llvm-image
-  - task: ic_gpdb
-    file: gpdb_src/concourse/tasks/ic_gpdb.yml
-    image: centos67-gpdb-gcc6-llvm-image
-    params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=off' installcheck-bugbuster
-      BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
-      TEST_OS: centos
-
-- name: icb_planner_codegen_centos6
-  serial: true
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [icg_planner_codegen_centos6]
-    - get: sync_tools_gpdb_centos
-      resource: sync_tools_gpdb_centos
-      passed: [icg_planner_codegen_centos6]
-    - get: bin_gpdb
-      resource: bin_gpdb_centos
-      passed: [icg_planner_codegen_centos6]
-      trigger: true
-    - get: centos67-gpdb-gcc6-llvm-image
-  - task: ic_gpdb
-    file: gpdb_src/concourse/tasks/ic_gpdb.yml
-    image: centos67-gpdb-gcc6-llvm-image
-    params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=on' installcheck-bugbuster
-      BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
-      TEST_OS: centos
-
-- name: icb_gporca_codegen_centos6
-  serial: true
-  plan:
-  - aggregate:
-    - get: gpdb_src
-      passed: [icg_gporca_codegen_centos6]
-    - get: sync_tools_gpdb_centos
-      resource: sync_tools_gpdb_centos
-      passed: [icg_gporca_codegen_centos6]
-    - get: bin_gpdb
-      resource: bin_gpdb_centos
-      passed: [icg_gporca_codegen_centos6]
-      trigger: true
-    - get: centos67-gpdb-gcc6-llvm-image
-  - task: ic_gpdb
-    file: gpdb_src/concourse/tasks/ic_gpdb.yml
-    image: centos67-gpdb-gcc6-llvm-image
-    params:
-      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=on' installcheck-bugbuster
+      MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=on' installcheck-world
       BLDWRAP_POSTGRES_CONF_ADDONS: "fsync=off"
       TEST_OS: centos
 
@@ -353,11 +265,11 @@ jobs:
   plan:
   - aggregate:
     - get: gpdb_src
-      passed: [icb_planner_centos6, icb_gporca_centos6, icb_planner_codegen_centos6, icb_gporca_codegen_centos6]
+      passed: [icw_planner_centos6, icw_gporca_centos6, icw_planner_codegen_centos6, icw_gporca_codegen_centos6]
     - get: gpaddon_src
     - get: bin_gpdb
       resource: bin_gpdb_centos
-      passed: [icb_planner_centos6, icb_gporca_centos6, icb_planner_codegen_centos6, icb_gporca_codegen_centos6]
+      passed: [icw_planner_centos6, icw_gporca_centos6, icw_planner_codegen_centos6, icw_gporca_codegen_centos6]
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: separate_qautils_files_for_rc
