The gpMgmt Makefile was copying over the libraries without regard to the OS, if you had versions built using vagrant that were not compatible with your OS this would fail
Throttle the vagrants to 50%

Build gpdb on debian as the vagrant user. The root user will fail
to change the uid/gid on the nfs mount

--- a/gpMgmt/bin/Makefile
+++ b/gpMgmt/bin/Makefile
@@ -65,7 +65,11 @@ pygresql:
 	fi
 
 	mkdir -p $(PYLIB_DIR)/pygresql
-	cp -r $(PYLIB_SRC)/$(PYGRESQL_DIR)/build/lib.*/* $(PYLIB_DIR)/pygresql
+	if [ `uname -s` = 'Darwin' ]; then \
+	  cp -r $(PYLIB_SRC)/$(PYGRESQL_DIR)/build/lib.macosx*/* $(PYLIB_DIR)/pygresql; \
+	else \
+	  cp -r $(PYLIB_SRC)/$(PYGRESQL_DIR)/build/lib.linux*/* $(PYLIB_DIR)/pygresql; \
+	fi
 	touch $(PYLIB_DIR)/__init__.py
 
 #
