--- a/src/tools/vagrant/centos/Vagrantfile
+++ b/src/tools/vagrant/centos/Vagrantfile
@@ -15,6 +15,7 @@ Vagrant.configure(2) do |config|
     vb.memory = 8192
     vb.cpus = 4
     vb.customize ["storagectl", :id, "--name", "SATA Controller", "--hostiocache", "on"]
+    vb.customize ['modifyvm', :id, '--cableconnected1', 'on']
   end
 
   if File.file?('vagrant-local.yml')
