--- a/concourse/pipelines/dev_pipeline.yml
+++ b/concourse/pipelines/dev_pipeline.yml
@@ -94,6 +94,16 @@ resources:
     secret_access_key: {{bucket-secret-access-key}}
     versioned_file: deliverables/QAUtils-rhel6-x86_64.tar.gz
 
+- name: gpdb_src_tinc_tarball
+  type: s3
+  source:
+    access_key_id: {{bucket-access-key-id}}
+    bucket: {{dev-bucket-name}}
+    region_name: {{aws-region}}
+    secret_access_key: {{bucket-secret-access-key}}
+    versioned_file: deliverables/greenplum-db-4.3.99.0-src.tar.gz
+
+
 ## ======================================================================
 ## jobs
 ## ======================================================================
@@ -110,7 +120,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: compile_gpdb
-    file: gpdb_src/concourse/compile_gpdb.yml
+    file: gpdb_src/concourse/tasks/compile_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       IVYREPO_HOST: {{ivyrepo_host}}
@@ -137,7 +147,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: compile_gpdb
-    file: gpdb_src/concourse/compile_gpdb_custom_config.yml
+    file: gpdb_src/concourse/tasks/compile_gpdb_custom_config.yml
     image: centos67-gpdb-gcc6-llvm-image
 
 - name: compile_gpdb_centos7
@@ -148,7 +158,7 @@ jobs:
       trigger: true
     - get: centos72-gpdb-gcc6-llvm-image
   - task: compile_gpdb
-    file: gpdb_src/concourse/compile_gpdb.yml
+    file: gpdb_src/concourse/tasks/compile_gpdb.yml
     image: centos72-gpdb-gcc6-llvm-image
     params:
       IVYREPO_HOST: {{ivyrepo_host}}
@@ -175,7 +185,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=off' installcheck-good
@@ -197,7 +207,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=off' installcheck-good
@@ -219,7 +229,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=on' installcheck-good
@@ -241,7 +251,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=on' installcheck-good
@@ -263,7 +273,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=off' installcheck-bugbuster
@@ -285,7 +295,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=off' installcheck-bugbuster
@@ -307,7 +317,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=off -c codegen=on' installcheck-bugbuster
@@ -329,7 +339,7 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: ic_gpdb
-    file: gpdb_src/concourse/ic_gpdb.yml
+    file: gpdb_src/concourse/tasks/ic_gpdb.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       MAKE_TEST_COMMAND: PGOPTIONS='-c optimizer=on -c codegen=on' installcheck-bugbuster
@@ -351,13 +361,22 @@ jobs:
       trigger: true
     - get: centos67-gpdb-gcc6-llvm-image
   - task: separate_qautils_files_for_rc
-    file: gpdb_src/concourse/separate_qautils_files_for_rc.yml
+    file: gpdb_src/concourse/tasks/separate_qautils_files_for_rc.yml
     image: centos67-gpdb-gcc6-llvm-image
     params:
       QAUTILS_TARBALL: rc_bin_gpdb/QAUtils-rhel6-x86_64.tar.gz
+
+  - task: gpdb_src_tinc_packaging
+    file: gpdb_src/concourse/tasks/gpdb_src_tinc_packaging.yml
+    image: centos67-gpdb-gcc6-llvm-image
+    output_mapping:
+      rc_bin_gpdb: packaged_gpdb_src_tinc
+    params:
+      GPDB_SRC_TAR_GZ: rc_bin_gpdb/greenplum-db-4.3.99.0-src.tar.gz
+
   - aggregate:
     - task: gpdb_rc_packaging_centos
-      file: gpdb_src/concourse/gpdb_packaging.yml
+      file: gpdb_src/concourse/tasks/gpdb_packaging.yml
       image: centos67-gpdb-gcc6-llvm-image
       input_mapping:
         bin_gpdb: rc_bin_gpdb
@@ -368,7 +387,7 @@ jobs:
         INSTALLER_ZIP: packaged_gpdb/greenplum-db-4.3.99.0-build-1-rhel6-x86_64.zip
         ADD_README_INSTALL: true
     - task: gpdb_appliance_rhel6_rc_packaging
-      file: gpdb_src/concourse/gpdb_packaging.yml
+      file: gpdb_src/concourse/tasks/gpdb_packaging.yml
       image: centos67-gpdb-gcc6-llvm-image
       input_mapping:
         bin_gpdb: rc_bin_gpdb
@@ -393,3 +412,46 @@ jobs:
     - put: qautils_rhel6_tarball
       params:
         file: rc_bin_gpdb/QAUtils-rhel6-x86_64.tar.gz
+    - put: gpdb_src_tinc_tarball
+      params:
+        file: packaged_gpdb_src_tinc/greenplum-db-4.3.99.0-src.tar.gz
+
+- name: cs-uao-regression
+  serial: true
+  plan:
+  - aggregate:
+    - get: gpdb_src
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+      trigger: true
+    - get: gpdb_src_tinc_tarball
+      tags: ["gpdb5-pulse-worker"]
+      passed: [gpdb_rc_packaging_centos]
+    - get: installer_rhel6_gpdb_rc
+      tags: ["gpdb5-pulse-worker"]
+      resource: installer_rhel6_gpdb_rc
+      passed: [gpdb_rc_packaging_centos]
+    - get: qautils_rhel6_tarball
+      tags: ["gpdb5-pulse-worker"]
+      resource: qautils_rhel6_tarball
+      passed: [gpdb_rc_packaging_centos]
+  - task: trigger_pulse
+    tags: ["gpdb5-pulse-worker"]
+    file: gpdb_src/ci/pulse/api/trigger_pulse.yml
+    input_mapping:
+      gpdb_src_archive: gpdb_src_tinc_tarball
+      installer_gpdb_rc: installer_rhel6_gpdb_rc
+      qautils_tarball: qautils_rhel6_tarball
+    params:
+      PULSE_URL: {{pulse_url}}
+      PULSE_PROJECT_NAME: "cs-uao-regression"
+      PULSE_USERNAME: {{pulse_username}}
+      PULSE_PASSWORD: {{pulse_password}}
+  - task: monitor_pulse
+    tags: ["gpdb5-pulse-worker"]
+    file: gpdb_src/ci/pulse/api/monitor_pulse.yml
+    params:
+      PULSE_URL: {{pulse_url}}
+      PULSE_PROJECT_NAME: "cs-uao-regression"
+      PULSE_USERNAME: {{pulse_username}}
+      PULSE_PASSWORD: {{pulse_password}}
