--- a/mgmt/concourse/tasks/ic_gpdb.yml
+++ b/mgmt/concourse/tasks/ic_gpdb.yml
@@ -4,11 +4,11 @@ image_resource:
 inputs:
   - name: gpdb_src
   - name: bin_gpdb
-  - name: sync_tools_gpdb
+  - name: sync_tools_gpdb_centos
 outputs:
 params:
   MAKE_TEST_COMMAND: ""
   BLDWRAP_POSTGRES_CONF_ADDONS: ""
   TEST_OS: ""
 run:
-  path: gpdb_src/concourse/scripts/tinc_gpdb.bash
+  path: gpdb_src/mgmt/concourse/scripts/ic_gpdb.bash
