--- a/mgmt/concourse/tasks/test_with_planner.yml
+++ b/mgmt/concourse/tasks/test_with_planner.yml
@@ -9,9 +9,9 @@ inputs:
 outputs:
   - name: icg_output
 run:
-  path: gpdb_src/concourse/scripts/test_gpdb.py
+  path: gpdb_src/mgmt/concourse/scripts/test_gpdb.py
   args:
-    - --mode=orca
+    - --mode=planner
     - --gpdb_name=bin_gpdb
     - bin_orca
     - bin_gpos
