--- a/ci/pulse/api/trigger_pulse.yml
+++ b/ci/pulse/api/trigger_pulse.yml
@@ -3,6 +3,7 @@ image_resource:
   type: docker-image
   source:
     repository: ruby
+    tag: 2-slim
 inputs:
   - name: gpdb_src
   - name: gpdb_src_archive
