--- a/src/backend/Makefile
+++ b/src/backend/Makefile
@@ -19,9 +19,14 @@ ifeq ($(enable_orca),yes)
 include $(BLD_TOP)/releng/releng.mk
 endif
 
+ifdef ADDON_DIR
+include $(BLD_TOP)/$(ADDON_DIR)/src/Makefile
+endif
+
 SUBDIRS = access bootstrap catalog parser commands executor \
 	fts lib libpq gp_libpq_fe main nodes optimizer port postmaster regex \
-	replication rewrite storage tcop tsearch utils $(top_builddir)/src/timezone cdb
+	replication rewrite storage tcop tsearch utils $(top_builddir)/src/timezone cdb\
+	$(ADDON_SUBDIR)
 
 ifeq ($(enable_orca),yes)
 SUBDIRS += gpopt
