--- a/concourse/tasks/unit_tests_gpcloud.yml
+++ b/concourse/tasks/unit_tests_gpcloud.yml
@@ -2,10 +2,10 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: pivotaldata/centos67-gpdb-gcc6-llvm-image
+    repository: pivotaldata/centos-gpdb-dev
+    tag: '6-gcc6.2-llvm3.7'
     username:
     password:
-    email:
 inputs:
   - name: gpdb_src
 run:
