--- a/concourse/pipelines/pipeline.yml
+++ b/concourse/pipelines/pipeline.yml
@@ -639,7 +639,7 @@ jobs:
     - get: gpdb_src
       passed: [gpdb_rc_packaging_centos]
       trigger: true
-    - get: sync_tools_gpdb_centos
+    - get: sync_tools_gpdb
       resource: sync_tools_gpdb_centos
     - get: bin_gpdb
       resource: bin_gpdb_centos
