--- a/concourse/tasks/gpcheckcloud_tests_gpcloud.yml
+++ b/concourse/tasks/gpcheckcloud_tests_gpcloud.yml
@@ -9,7 +9,7 @@ image_resource:
 inputs:
   - name: gpdb_src
   - name: bin_gpdb
-  - name: sync_tools_gpdb_centos
+  - name: sync_tools_gpdb
 params:
   s3conf:
 run:
