gpcloud: support other endpoints than AWS
Refactor S3Url class
Add new config file parameters `version` and `verifycert`, location parameter `region`
Support other endpoints than AWS

For example:
's3://s3-us-west-2.amazonaws.com/bucket/prefix config=/path/to/config/file region=us-west-2'
's3://s3.amazonaws.com/bucket/prefix config=/path/to/config/file region=us-east-1'
's3://HOST_OF_ECS[:PORT]/bucket/prefix config=/path/to/config/file section=ECS'

Signed-off-by: Haozhou Wang <hawang@pivotal.io>
Signed-off-by: Peifeng Qiu <pqiu@pivotal.io>
Signed-off-by: Yuan Zhao <yuzhao@pivotal.io>

--- a/gpAux/extensions/gpcloud/test/Makefile
+++ b/gpAux/extensions/gpcloud/test/Makefile
@@ -20,7 +20,7 @@ all: test
 
 # Google TEST
 TEST_SRC = $(TEST_OBJS:.o=.cpp)
-TEST_APP = s3test
+TEST_APP = gpcloud_test
 gtest_filter ?= *
 
 DEP_FILES := $(patsubst %.o,%.d,$(TEST_OBJS))
