--- a/gpAux/extensions/gpcloud/test/data/s3test.conf
+++ b/gpAux/extensions/gpcloud/test/data/s3test.conf
@@ -25,18 +25,26 @@ config6
 config7
 
 [special_over]
+secret = "secret_test"
+accessid = "accessid_test"
 threadnum = 1024
 chunksize = 134217799
 
 [special_low]
+secret = "secret_test"
+accessid = "accessid_test"
 threadnum = 0
 chunksize = 0
 
 [special_wrongkeyname]
+secret = "secret_test"
+accessid = "accessid_test"
 threadnum_ =
 chunksize& =
 
 [special_switches]
+secret = "secret_test"
+accessid = "accessid_test"
 encryption = false
 debug_curl = true
 
@@ -56,3 +64,8 @@ logserverhost = 127.0.0.1
 
 low_speed_limit = 1024
 low_speed_time = 600
+
+[skip_verify]
+verifycert = false
+secret = "secret_test"
+accessid = "accessid_test"
